<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayEventActivity" >
	<LinearLayout >
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/title" />
    	<EditText android:id="@+id/title_message"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/title_message" />
   </LinearLayout>
   <LinearLayout >
   		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/location" />
    	<EditText android:id="@+id/location_message"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/location_message" />
   </LinearLayout>
   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeZone" />
    <LinearLayout >
   		 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_rate" />
       	<EditText 
        android:id="@+id/payrate_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payrate_message" />
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expected_payDate" />   
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_client" />
    
    	<EditText 
        android:id="@+id/Pro_Client_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pro_client_message" />
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiring_company" />
    
    	<EditText 
        android:id="@+id/hiring_company_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hiring_company_message" />
    </LinearLayout>
        <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role" />
    
    	<EditText 
        android:id="@+id/role_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/role_message" />
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts" />
    
    	<EditText 
        android:id="@+id/contacts_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contacts_message" />
    </LinearLayout>
     <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert" />
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat" />
    </LinearLayout>
    <LinearLayout >
   		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes" />
    
    	<EditText 
        android:id="@+id/note_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_message" />
    </LinearLayout>
    

</TableLayout>
