<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/calendarButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/calendar_button" />

    <CalendarView
        android:id="@+id/myCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/calendarButton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/documentButton"
        android:showWeekNumber="false" />

    <Button
        android:id="@+id/documentButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/myCalendar"
        android:text="@string/documents_button" />

    <Button
        android:id="@+id/financeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/documentButton"
        android:layout_alignBottom="@+id/documentButton"
        android:layout_toLeftOf="@+id/documentButton"
        android:layout_toRightOf="@+id/reportButton"
        android:text="@string/money_button" />

    <Button
        android:id="@+id/reportButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calendarButton"
        android:layout_alignBottom="@+id/calendarButton"
        android:layout_toRightOf="@+id/calendarButton"
        android:text="@string/reports_button" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/myCalendar"
        android:layout_alignLeft="@+id/myCalendar"
        android:text="@string/selectedDate" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/myCalendar"
        android:layout_alignTop="@+id/myCalendar"
        android:onClick="addEvent"
        android:text="@string/addEvent" />

</RelativeLayout>
